--- a/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=451,Y=590)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -123,6 +123,7 @@ LastExecutedLaunchName=DESKTOP-U7Q7FAF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=451,Y=590)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1196,7 +1197,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Animations
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/GodOfWar_Axe
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1879,8 +1880,8 @@ WmfMediaSettings.Debug=True
 BP_PlayerCharacter_C.TransformCommon=False
 BP_PlayerCharacter_C.Animation=False
 BP_PlayerCharacter_C.Mesh=False
-BP_PlayerCharacter_C.Tick=False
-BP_PlayerCharacter_C.ComponentTick=False
+BP_PlayerCharacter_C.Tick=True
+BP_PlayerCharacter_C.ComponentTick=True
 BP_PlayerCharacter_C.Clothing=False
 BP_PlayerCharacter_C.LeaderPoseComponent=False
 BP_PlayerCharacter_C.Physics=False
@@ -1898,7 +1899,7 @@ BP_PlayerCharacter_C.VirtualTexture=False
 BP_PlayerCharacter_C.Tags=False
 BP_PlayerCharacter_C.AssetUserData=False
 BP_PlayerCharacter_C.Replication=False
-BP_PlayerCharacter_C.ComponentReplication=False
+BP_PlayerCharacter_C.ComponentReplication=True
 BP_PlayerCharacter_C.Activation=False
 BP_PlayerCharacter_C.Variable=False
 BP_PlayerCharacter_C.Cooking=False
@@ -1920,13 +1921,13 @@ BP_PlayerCharacter_C.Velocity=False
 BP_PlayerCharacter_C.PlanarMovement=False
 BP_PlayerCharacter_C.MovementComponent=False
 BP_PlayerCharacter_C.Shape=False
-BP_PlayerCharacter_C.Character=False
+BP_PlayerCharacter_C.Character=True
 BP_PlayerCharacter_C.Camera=False
 BP_PlayerCharacter_C.Pawn=False
 BP_PlayerCharacter_C.Actor=False
 BP_PlayerCharacter_C.Input=False
-BP_PlayerCharacter_C.WorldPartition=False
-BP_PlayerCharacter_C.Events=False
+BP_PlayerCharacter_C.WorldPartition=True
+BP_PlayerCharacter_C.Events=True
 CapsuleComponent.Variable=True
 CapsuleComponent.TransformCommon=True
 CapsuleComponent.Sockets=True
@@ -2000,7 +2001,7 @@ BP_GameMode_C.Game=True
 BP_GameMode_C.GameMode=True
 BP_GameMode_C.Physics=True
 BP_GameMode_C.Events=True
-BP_PlayerCharacter_C.Networking=True
+BP_PlayerCharacter_C.Networking=False
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
@@ -2061,7 +2062,7 @@ BP_PlayerCharacter_C.Optimization=False
 BP_PlayerCharacter_C.LOD=False
 BP_PlayerCharacter_C.MaterialParameters=False
 BP_PlayerCharacter_C.TextureStreaming=False
-BP_PlayerCharacter_C.DataLayers=False
+BP_PlayerCharacter_C.DataLayers=True
 BP_PlayerCharacter_C.PostProcess=False
 BP_PlayerCharacter_C.CameraOptions=False
 BP_PlayerCharacter_C.CameraSettings=False
@@ -2225,7 +2226,7 @@ AnimStateNode.GraphNodeDetail=True
 AnimStateNode.Animation State=True
 AnimStateConduitNode.GraphNodeDetail=True
 BP_PlayerCharacter_C.Player state=True
-BP_PlayerCharacter_C.PlayerCharacter=True
+BP_PlayerCharacter_C.PlayerCharacter=False
 K2Node_VariableGet.Events=True
 AnimStateAliasNode.GraphNodeDetail=True
 AnimStateAliasNode.State Alias=True
@@ -2245,28 +2246,63 @@ AnimGraphNode_SequencePlayer.Tag=True
 AnimGraphNode_TransitionResult.Result=True
 AnimGraphNode_TransitionResult.Functions=True
 AnimGraphNode_TransitionResult.Tag=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Functions=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Tag=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
+AnimationStateMachineGraph.Graph=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+AnimGraphNode_UseCachedPose.Functions=True
+AnimGraphNode_UseCachedPose.Tag=True
+AnimGraphNode_BlendBoneByChannel.Settings=True
+AnimGraphNode_BlendBoneByChannel.Functions=True
+AnimGraphNode_BlendBoneByChannel.Blend=True
+AnimGraphNode_BlendBoneByChannel.Tag=True
+AnimGraphNode_BlendSpaceGraph.GraphNodeDetail=True
+AnimGraphNode_BlendSpaceGraph.Blend Space=True
+AnimGraphNode_BlendSpaceGraph.Coordinates=True
+AnimGraphNode_BlendSpaceGraph.Functions=True
+AnimGraphNode_BlendSpaceGraph.Sync=True
+AnimGraphNode_BlendSpaceGraph.Tag=True
+AnimGraphNode_SequenceEvaluator.Sync=True
+AnimGraphNode_SequenceEvaluator.Relevancy=True
+AnimGraphNode_SequenceEvaluator.Functions=True
+AnimGraphNode_SequenceEvaluator.Settings=True
+AnimGraphNode_SequenceEvaluator.Tag=True
+AnimStateNode.Events=False
+AnimGraphNode_AssetPlayerBase.Functions=True
+AnimGraphNode_AssetPlayerBase.Tag=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animations/BS_Character_Armed
-MRUItem1=/Game/Animations/BS_Character_Unarmed
-MRUItem2=/Game/Blueprints/BP_PlayerCharacter
-MRUItem3=/Game/Animations/ABP_Character
-MRUItem4=/Game/Animations/Old/ABP_Character_Current_Old
-MRUItem5=/Game/Animations/Old/BS_Character_Old
-MRUItem6=/Game/Animations/AS_Character_Idle_Unarmed
-MRUItem7=/Game/Animations/AS_Character_ThrowAxe
-MRUItem8=/Game/Animations/AS_Character_RecoverAxe
-MRUItem9=/Game/Animations/AS_Character_Point
-MRUItem10=/Game/Animations/Testing
-MRUItem11=/Game/Animations/AS_Character_Idle_Armed
-MRUItem12=/Game/Animations/AS_Character_ThrowAxe_Montage
-MRUItem13=/Game/Animations/Pro_Melee_Axe_Pack/standing_melee_combo_attack_ver__3
-MRUItem14=/Game/Animations/Old/BS_Character
-MRUItem15=/Game/Animations/Old/ABP_Character_Current
-MRUItem16=/Game/Animations/AC_Character_ThrowAxe
-MRUItem17=/Game/Animations/Old/AS_Character_Idle
-MRUItem18=/Game/Animations/_RunLeft_Test
-MRUItem19=/Game/Animations/_RunLeft_Test_Anim
+MRUItem0=/Game/Meshes/SK_Character
+MRUItem1=/Game/Blueprints/BP_PlayerCharacter
+MRUItem2=/Game/Animations/AS_Character_DisarmAxe
+MRUItem3=/Game/Animations/AS_Character_ArmAxe
+MRUItem4=/Game/Animations/ABP_Character
+MRUItem5=/Game/Meshes/SKEL_Character
+MRUItem6=/Game/Animations/AS_Character_ArmAxe_Montage
+MRUItem7=/Game/Animations/BS_Character_Armed
+MRUItem8=/Game/Animations/BS_Character_Unarmed
+MRUItem9=/Game/Animations/Old/ABP_Character_Current_Old
+MRUItem10=/Game/Animations/Old/BS_Character_Old
+MRUItem11=/Game/Animations/AS_Character_Idle_Unarmed
+MRUItem12=/Game/Animations/AS_Character_ThrowAxe
+MRUItem13=/Game/Animations/AS_Character_RecoverAxe
+MRUItem14=/Game/Animations/AS_Character_Point
+MRUItem15=/Game/Animations/Testing
+MRUItem16=/Game/Animations/AS_Character_Idle_Armed
+MRUItem17=/Game/Animations/AS_Character_ThrowAxe_Montage
+MRUItem18=/Game/Animations/Pro_Melee_Axe_Pack/standing_melee_combo_attack_ver__3
+MRUItem19=/Game/Animations/Old/BS_Character
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2276,19 +2312,60 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 StaticMeshActor.StaticMesh=False
 FbxImportUI.Animation=True
 PropertyWrapper.Variable=False
+BP_PlayerCharacter_C.Character Movement (General Settings)=False
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 FbxImportUI=
-AnimStateTransitionNode="\"Object.Events.TransitionInterrupt\" "
-AnimStateNodeBase=
-EdGraphNode=
+AnimStateTransitionNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
+AnimStateNodeBase="\"Object\" "
+EdGraphNode="\"Object\" "
+AnimGraphNode_LayeredBoneBlend="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base="\"Object\" "
+K2Node="\"Object\" "
+BlendSpace="\"Object\" "
+AnimationAsset="\"Object\" "
+AnimGraphNode_BlendSpaceGraph="\"Object\" "
+AnimGraphNode_BlendSpaceGraphBase="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
+AnimStateNode="\"Object\" "
+AnimGraphNode_SaveCachedPose="\"Object\" "
+AnimGraphNode_UseCachedPose="\"Object\" "
+AnimGraphNode_SequencePlayer="\"Object\" "
+AnimGraphNode_SequenceEvaluator="\"Object\" "
+PersonaPreviewSceneDescription=
+AssetViewerSettings=
+AnimSequence="\"Object\" "
+AnimSequenceBase="\"Object\" "
+AnimGraphNode_StateMachine="\"Object\" "
+AnimGraphNode_StateMachineBase="\"Object\" "
+ABP_Character_C="\"Object\" "
+AnimInstance="\"Object\" "
+AnimGraphNode_StateResult="\"Object\" "
+AnimGraphNode_TransitionResult="\"Object\" "
+AnimationGraph="\"Object\" "
+EdGraph="\"Object\" "
+BP_PlayerCharacter_C="\"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings\" \"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
+PlayerCharacter="\"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings\" \"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
+Character="\"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings\" \"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
+Pawn="\"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings\" \"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
+SkeletalMesh="\"Object\" "
+SkinnedAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+LODInfoUILayout="\"Object\" "
+CameraComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+BoneProxy="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2419,6 +2496,8 @@ LevelEditorPlaySettings=True
 /Game/Animations/Old/BS_Character_Old.BS_Character_Old=0
 /Game/Animations/Old/ABP_Character_Current_Old.ABP_Character_Current_Old=0
 /Game/Animations/BS_Character_Armed.BS_Character_Armed=0
+/Game/Animations/AS_Character_ArmAxe.AS_Character_ArmAxe=0
+/Game/Animations/AS_Character_DisarmAxe.AS_Character_DisarmAxe=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2741,7 +2820,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [RootWindow]
-ScreenPosition=X=155.000 Y=118.000
+ScreenPosition=X=430.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2918,8 +2997,23 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Assemble,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveBack,InputSettings.Bindings.AxisMappings.MoveLeft,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Assemble,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveBack,InputSettings.Bindings.AxisMappings.MoveLeft,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Assemble,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveBack,InputSettings.Bindings.AxisMappings.MoveLeft,
-BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
+BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
+AnimGraphNode_BlendSpaceGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+K2Node_VariableGet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+ABP_Character_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+PropertyWrapper=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+K2Node_VariableSet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+Character=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+AnimGraphNode_TransitionResult=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+PlayerCharacter=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+BP_PlayerCharacter_C=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens|Bloom,BP_PlayerCharacter_C.PostProcess.Lens|Exposure,BP_PlayerCharacter_C.PostProcess.Lens|Camera,BP_PlayerCharacter_C.PostProcess.Lens,BP_PlayerCharacter_C.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,BP_PlayerCharacter_C.PostProcess.Global Illumination|Lumen Global Illumination,BP_PlayerCharacter_C.PostProcess.Global Illumination|Ray Tracing Global Illumination,BP_PlayerCharacter_C.PostProcess.Global Illumination,BP_PlayerCharacter_C.PostProcess.Reflections|Screen Space Reflections,BP_PlayerCharacter_C.PostProcess.Reflections|Ray Tracing Reflections,BP_PlayerCharacter_C.PostProcess.Reflections,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ambient Occlusion,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ray Tracing Translucency,BP_PlayerCharacter_C.PostProcess.Rendering Features|PathTracing,BP_PlayerCharacter_C.PostProcess.Rendering Features,
+CameraComponent=
+CapsuleComponent=
+SceneComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens|Bloom,BP_PlayerCharacter_C.PostProcess.Lens|Exposure,BP_PlayerCharacter_C.PostProcess.Lens|Camera,BP_PlayerCharacter_C.PostProcess.Lens,BP_PlayerCharacter_C.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,BP_PlayerCharacter_C.PostProcess.Global Illumination|Lumen Global Illumination,BP_PlayerCharacter_C.PostProcess.Global Illumination|Ray Tracing Global Illumination,BP_PlayerCharacter_C.PostProcess.Global Illumination,BP_PlayerCharacter_C.PostProcess.Reflections|Screen Space Reflections,BP_PlayerCharacter_C.PostProcess.Reflections|Ray Tracing Reflections,BP_PlayerCharacter_C.PostProcess.Reflections,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ambient Occlusion,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,BP_PlayerCharacter_C.PostProcess.Rendering Features|Ray Tracing Translucency,BP_PlayerCharacter_C.PostProcess.Rendering Features|PathTracing,BP_PlayerCharacter_C.PostProcess.Rendering Features,
+EdGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+AnimGraphNode_BlendSpacePlayer=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+AnimStateTransitionNode=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
