--- a/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,6 @@ MRUItem0=/Game/Maps/Map
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/Maps/Map
@@ -1182,7 +1181,7 @@ HierarchicalLODUtilities.TimeStamp=2022.11.29-11.06.52
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -1198,7 +1197,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/GodOfWar_Axe
+ContentBrowserDrawer.SelectedPaths=/Game/Textures
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1224,13 +1223,13 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Animations
+ContentBrowserTab1.SelectedPaths=/Game/Textures
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
-ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.CurrentViewType=0
 SequenceBrowser.ThumbnailSize=2
 SequenceBrowser.CurrentViewType=2
 SequenceBrowser.HiddenColumns=Compression Ratio
@@ -2284,28 +2283,44 @@ AnimGraphNode_AssetPlayerBase.Functions=True
 AnimGraphNode_AssetPlayerBase.Tag=True
 MaterialExpressionReroute.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+Texture2D.Interchange =True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animations/ABP_Character
-MRUItem1=/Game/Materials/M_Character_Head
-MRUItem2=/Game/Materials/M_Character_Body
-MRUItem3=/Game/Textures/T_Head_E
-MRUItem4=/Game/Meshes/SK_Character
-MRUItem5=/Game/Blueprints/BP_PlayerCharacter
-MRUItem6=/Game/Animations/AS_Character_DisarmAxe
-MRUItem7=/Game/Animations/AS_Character_ArmAxe
-MRUItem8=/Game/Meshes/SKEL_Character
-MRUItem9=/Game/Animations/AS_Character_ArmAxe_Montage
-MRUItem10=/Game/Animations/BS_Character_Armed
-MRUItem11=/Game/Animations/BS_Character_Unarmed
-MRUItem12=/Game/Animations/Old/ABP_Character_Current_Old
-MRUItem13=/Game/Animations/Old/BS_Character_Old
-MRUItem14=/Game/Animations/AS_Character_Idle_Unarmed
-MRUItem15=/Game/Animations/AS_Character_ThrowAxe
-MRUItem16=/Game/Animations/AS_Character_RecoverAxe
-MRUItem17=/Game/Animations/AS_Character_Point
-MRUItem18=/Game/Animations/Testing
-MRUItem19=/Game/Animations/AS_Character_Idle_Armed
+MRUItem0=/Game/Materials/M_Axe_Leather
+MRUItem1=/Game/Materials/M_Axe_Handle
+MRUItem2=/Game/Materials/M_Axe_Blade
+MRUItem3=/Game/Meshes/SM_Axe
+MRUItem4=/Game/Materials/M_Axe_Bands
+MRUItem5=/Game/Textures/T_Axe_Handle_R1
+MRUItem6=/Game/Textures/T_Axe_Handle_R
+MRUItem7=/Game/Textures/T_Axe_Leather_R
+MRUItem8=/Game/Animations/ABP_Character
+MRUItem9=/Game/Materials/M_Character_Head
+MRUItem10=/Game/Materials/M_Character_Body
+MRUItem11=/Game/Textures/T_Head_E
+MRUItem12=/Game/Meshes/SK_Character
+MRUItem13=/Game/Blueprints/BP_PlayerCharacter
+MRUItem14=/Game/Animations/AS_Character_DisarmAxe
+MRUItem15=/Game/Animations/AS_Character_ArmAxe
+MRUItem16=/Game/Meshes/SKEL_Character
+MRUItem17=/Game/Animations/AS_Character_ArmAxe_Montage
+MRUItem18=/Game/Animations/BS_Character_Armed
+MRUItem19=/Game/Animations/BS_Character_Unarmed
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2325,7 +2340,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
-FbxImportUI=
+FbxImportUI="\"Object\" "
 AnimStateTransitionNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
 AnimStateNodeBase="\"Object\" "
 EdGraphNode="\"Object\" "
@@ -2475,6 +2490,9 @@ TakeRecorderWorldSourceSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
+StaticMesh="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2610,6 +2628,14 @@ LevelEditorPlaySettings=True
 /Game/Textures/T_Head_E.T_Head_E=1
 /Game/Materials/M_Character_Body.M_Character_Body=0
 /Game/Materials/M_Character_Head.M_Character_Head=0
+/Game/Meshes/SM_Axe.SM_Axe=0
+/Game/Materials/M_Axe_Bands.M_Axe_Bands=0
+/Game/Textures/T_Axe_Leather_R.T_Axe_Leather_R=1
+/Game/Textures/T_Axe_Handle_R1.T_Axe_Handle_R1=1
+/Game/Textures/T_Axe_Handle_R.T_Axe_Handle_R=1
+/Game/Materials/M_Axe_Blade.M_Axe_Blade=0
+/Game/Materials/M_Axe_Handle.M_Axe_Handle=0
+/Game/Materials/M_Axe_Leather.M_Axe_Leather=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2768,7 +2794,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [MaterialEditor]
 PrimType=1
