--- a/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1181,8 +1181,9 @@ HierarchicalLODUtilities.TimeStamp=2022.11.29-11.06.52
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Animations/ABP_Character.ABP_Character
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1197,7 +1198,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1880,8 +1881,8 @@ WmfMediaSettings.Debug=True
 BP_PlayerCharacter_C.TransformCommon=False
 BP_PlayerCharacter_C.Animation=False
 BP_PlayerCharacter_C.Mesh=False
-BP_PlayerCharacter_C.Tick=True
-BP_PlayerCharacter_C.ComponentTick=True
+BP_PlayerCharacter_C.Tick=False
+BP_PlayerCharacter_C.ComponentTick=False
 BP_PlayerCharacter_C.Clothing=False
 BP_PlayerCharacter_C.LeaderPoseComponent=False
 BP_PlayerCharacter_C.Physics=False
@@ -1899,7 +1900,7 @@ BP_PlayerCharacter_C.VirtualTexture=False
 BP_PlayerCharacter_C.Tags=False
 BP_PlayerCharacter_C.AssetUserData=False
 BP_PlayerCharacter_C.Replication=False
-BP_PlayerCharacter_C.ComponentReplication=True
+BP_PlayerCharacter_C.ComponentReplication=False
 BP_PlayerCharacter_C.Activation=False
 BP_PlayerCharacter_C.Variable=False
 BP_PlayerCharacter_C.Cooking=False
@@ -2298,29 +2299,57 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
+SkeletalMeshSocket.Socket Parameters=True
+BP_PlayerCharacter_C.Player Status=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+BP_PlayerCharacter_C.StaticMesh=True
+K2Node_CallFunction.Graph=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
+EditorNotifyObject.AnimLink=True
+EditorNotifyObject.AnimNotify=True
+K2Node_InputDebugKey.Input=True
+K2Node_InputDebugKey.Modifier=True
+K2Node_InputAction.Input=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_Axe_Leather
-MRUItem1=/Game/Materials/M_Axe_Handle
-MRUItem2=/Game/Materials/M_Axe_Blade
-MRUItem3=/Game/Meshes/SM_Axe
-MRUItem4=/Game/Materials/M_Axe_Bands
-MRUItem5=/Game/Textures/T_Axe_Handle_R1
-MRUItem6=/Game/Textures/T_Axe_Handle_R
-MRUItem7=/Game/Textures/T_Axe_Leather_R
-MRUItem8=/Game/Animations/ABP_Character
-MRUItem9=/Game/Materials/M_Character_Head
-MRUItem10=/Game/Materials/M_Character_Body
-MRUItem11=/Game/Textures/T_Head_E
-MRUItem12=/Game/Meshes/SK_Character
-MRUItem13=/Game/Blueprints/BP_PlayerCharacter
-MRUItem14=/Game/Animations/AS_Character_DisarmAxe
-MRUItem15=/Game/Animations/AS_Character_ArmAxe
-MRUItem16=/Game/Meshes/SKEL_Character
-MRUItem17=/Game/Animations/AS_Character_ArmAxe_Montage
-MRUItem18=/Game/Animations/BS_Character_Armed
-MRUItem19=/Game/Animations/BS_Character_Unarmed
+MRUItem0=/Game/Animations/AM_Character_DisarmAxe
+MRUItem1=/Game/Blueprints/BP_PlayerCharacter
+MRUItem2=/Game/Animations/AM_Character_ArmAxe
+MRUItem3=/Game/Animations/ABP_Character
+MRUItem4=/Game/Meshes/SKEL_Character
+MRUItem5=/Game/Materials/M_Axe_Leather
+MRUItem6=/Game/Materials/M_Axe_Handle
+MRUItem7=/Game/Materials/M_Axe_Blade
+MRUItem8=/Game/Meshes/SM_Axe
+MRUItem9=/Game/Materials/M_Axe_Bands
+MRUItem10=/Game/Textures/T_Axe_Handle_R1
+MRUItem11=/Game/Textures/T_Axe_Handle_R
+MRUItem12=/Game/Textures/T_Axe_Leather_R
+MRUItem13=/Game/Materials/M_Character_Head
+MRUItem14=/Game/Materials/M_Character_Body
+MRUItem15=/Game/Textures/T_Head_E
+MRUItem16=/Game/Meshes/SK_Character
+MRUItem17=/Game/Animations/AS_Character_DisarmAxe
+MRUItem18=/Game/Animations/AS_Character_ArmAxe
+MRUItem19=/Game/Animations/AS_Character_ArmAxe_Montage
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2331,10 +2360,11 @@ StaticMeshActor.StaticMesh=False
 FbxImportUI.Animation=True
 PropertyWrapper.Variable=False
 BP_PlayerCharacter_C.Character Movement (General Settings)=False
+EditorNotifyObject.AnimLink=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
@@ -2372,7 +2402,7 @@ AnimGraphNode_StateResult="\"Object\" "
 AnimGraphNode_TransitionResult="\"Object\" "
 AnimationGraph="\"Object\" "
 EdGraph="\"Object\" "
-BP_PlayerCharacter_C="\"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings\" \"Object.PlayerCharacter._camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" "
+BP_PlayerCharacter_C=
 PlayerCharacter=
 Character=
 Pawn=
@@ -2493,6 +2523,22 @@ WmfMediaSettings="\"Object\" "
 StaticMesh="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
+SkeletalMeshSocket="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+PersonaPreviewSceneAnimationController="\"Object\" "
+PersonaPreviewSceneController="\"Object\" "
+AnimMontage="\"Object\" "
+AnimCompositeBase="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+EditorNotifyObject="\"Object\" \"Object.Event.Event\" "
+EditorAnimBaseObj="\"Object\" \"Object.Event.Event\" "
+K2Node_InputDebugKey="\"Object\" "
+K2Node_InputAction="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2636,6 +2682,8 @@ LevelEditorPlaySettings=True
 /Game/Materials/M_Axe_Blade.M_Axe_Blade=0
 /Game/Materials/M_Axe_Handle.M_Axe_Handle=0
 /Game/Materials/M_Axe_Leather.M_Axe_Leather=0
+/Game/Animations/AM_Character_DisarmAxe.AM_Character_DisarmAxe=0
+/Game/Animations/AM_Character_ArmAxe.AM_Character_ArmAxe=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3138,20 +3186,22 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Acti
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 AnimGraphNode_BlendSpaceGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-K2Node_VariableGet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+K2Node_VariableGet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 ABP_Character_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 PropertyWrapper=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 K2Node_VariableSet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 Character=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 AnimGraphNode_TransitionResult=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 PlayerCharacter=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-BP_PlayerCharacter_C=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens
-CameraComponent=
-CapsuleComponent=
+BP_PlayerCharacter_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+CameraComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+CapsuleComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 SceneComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens
 EdGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 AnimGraphNode_BlendSpacePlayer=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 AnimStateTransitionNode=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+SkeletalMeshComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+StaticMeshComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
